--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,6 @@
     <title>Soundcloud-express-test</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(assets) styles/screen.css -->
     <link rel="stylesheet" href="styles/screen.css">
     <!-- endbuild -->
@@ -20,7 +19,6 @@
     <![endif]-->
     <nav class="navbar navbar-inverse navbar-default">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -30,7 +28,6 @@
                 </button>
                 <a class="navbar-brand" href="#" style="padding:0; margin-top:2px;"><img src="https://developers.soundcloud.com/assets/logo_big_white-bdafb3beba25fb86c2df365d05674e64.png" alt="" style="float:left;"><span class="logoText">TOUR EXPERIENCE</span></a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 
                 
@@ -87,14 +84,13 @@
                 
                 <script src="scripts/main.js"></script>
                 <!-- endbuild -->
-                <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
                 <script>
                 (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
                 function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
                 e=o.createElement(i);r=o.getElementsByTagName(i)[0];
                 e.src='//www.google-analytics.com/analytics.js';
                 r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-                ga('create','UA-XXXXX-X');ga('send','pageview');
+                ga('create','UA-74713328-1');ga('send','pageview');
                 </script>
             </body>
         </html>
